--- a/src/classes/TestController.cls
+++ b/src/classes/TestController.cls
@@ -21,8 +21,8 @@ public with sharing class TestController {
 
 	/**
     * @description Returns field describe data
-    * @param objectNameASD the name of the object to look up
-    * @param mycustomFIELD the name of the field to look up
+    * @param objectNameASD2222 the name of the object to look up
+    * @param mycustomFIELD2222 the name of the field to look up
     * @return the describe field result for the given field
     * @example
     * Account a = new Account();
